--- a/src/styles/pages/explore-course-page.scss
+++ b/src/styles/pages/explore-course-page.scss
@@ -4,7 +4,7 @@
   max-width: 1200px;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.25rem;
   margin-top: 2rem;
 
   .course-main-header {
